--- a/package.json
+++ b/package.json
@@ -89,7 +89,10 @@
     "David Racero <david.k@aave.com>"
   ],
   "license": "AGPL-3.0",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^15.0.0",
+    "hardhat-gas-reporter": "^1.0.7"
+  },
   "keywords": [
     "aave",
     "stake",
